Add mapstruct dependency